<resources>
    <string name="app_name">TimeRomanNews</string>
    <string name="time_roman_news">TimeRomanNews.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="failed_to_load_data">Failed to Load Data</string>
    <string name="your_token_is_expired">Your token is expired</string>
    <string name="hot_topics">Hot Topics</string>
    <string name="hot_topics_caption">See What’s Happening in the World</string>
</resources>
