<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.timeromannews.ui.HomeActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/whiteTertiary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="17dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="3dp"
                        android:fontFamily="@font/opensans_bold"
                        android:text="-"
                        android:textColor="@color/whitePrimary"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.007"
                        app:layout_constraintStart_toEndOf="@+id/iv_profile"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_bio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:text="-"
                        android:textColor="@color/whitePrimary"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tv_name"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_web"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="28dp"
                        android:text="-"
                        android:textColor="@color/whitePrimary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tv_bio"
                        app:layout_constraintTop_toBottomOf="@+id/tv_bio"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_hot_topics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/hot_topics"
                    android:layout_marginStart="17dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginTop="29dp"
                    android:textSize="18sp"
                    android:textColor="@color/blackPrimary" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_hot_topics_captions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/hot_topics_caption"
                    android:layout_marginStart="17dp"
                    android:layout_marginEnd="17dp"
                    android:textSize="14sp"
                    android:textColor="@color/blackPrimary" />
                <RelativeLayout
                    android:id="@+id/layout_news_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_news"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        tools:listitem="@layout/item_news"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/layout_news_list_failed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:textSize="17sp"
                        android:text="@string/failed_to_load_data"/>
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
